style.css
@import url(NotoSansThaiUI-webfonts/stylesheet.css);

.timeline {
  position: relative;
  background: white;
  transition: all 0.5s ease;
}
.fixed {
  position: fixed;
  left: 50%;
  /* width: 50px; */
}
.circle {
  border: 0;
  border-radius: 50%;
  background: black;
  color: white;
  text-align: center;
  padding: 5px;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font: normal 16px 'Noto Sans Thai UI', 'Noto Sans', sans-serif;
  color: black;
  /* color: white; */
  overflow-x: hidden;
  padding-bottom: 50px;
  background-color: white;
  /* background-color: #4a4a4a; */
}

a:link, a:visited, a:active {
  text-decoration: none;
  color: #F0324B;
}
a:hover {
  color: #F0324B;
}

/* INTRO */
.intro, .article {
  padding: 15px;
  height: 100vh;
}
.container {
  width: 100%;
  max-width: 320px;
  padding: 10px;
  margin: 0 auto;
}

h1 {
  font-size: 40px;
  font-weight: bold;
  line-height: 45px;
}
h2 {
  font-size: 16px;
  font-weight: 300;
}
h3 {
  font-size: 12px;
  font-weight: bold;
}
h4 {
  font-size: 10px;
  font-weight: 300;
}
.highlight {
  color: #F0324B;
}
.centered {
  text-align: center;
}
.right-aligned {
  text-align: right;
}
.top-space {
  margin-top: 2em;
}

#counter .text {
  font-family: 'Libre Baskerville', serif
}
#election_date, #counter {
  visibility: hidden;
  opacity: 0;
}
#election_date.shown, #counter.shown {
  visibility: visible;
  opacity: 1;
  transition: opacity 1s ease;
}

.mini-timeline {
  margin-left: -140px;
  transition: all 1s ease;
}
#hand {
  top: 270px;
}
#box {
  top: 320px;
}

/* TIMELINE */
.timeline ul li {
  list-style-type: none;
  position: relative;
  width: 320px;
  /* height: 100vh; */
  margin: 0 auto;
}

.timeline ul li::before, .timeline ul li::after {
  position: absolute;
  left: 50%;
  bottom: 42px;
  height: 14px;
}
.timeline ul li::after {
  content: '';
  width: 14px;
  transform: translateX(-50%);
  border-radius: 50%;
  background: inherit;
}

.timeline ul li > div {
  position: relative;
  bottom: 0;
  width: 320px;
  /* height: 100%; */
  padding: 15px;
}
.red-background {
  background: #F0324B;
  color: white;
}
.black-background {
  background: black;
  color: white;
}
.white-background {
  background: white;
  color: black;
}
/* .red-black-background {
  animation: red-black 2s forwards;
}
.red-white-background {
  animation: red-white 2s forwards;
}
@keyframes red-black {
  25%  { background: #F0324B; color: white; }
  75%  { background: #F0324B; color: white; }
  100% { background: black;   color: white; }
}
@keyframes red-white {
  25%  { background: #F0324B; color: white; }
  75%  { background: #F0324B; color: white; }
  100% { background: white;   color: black; }
} */

.time {
  display: block;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  /* text-align: center; */
  margin: 2em 0 2em 60px;
}
/* .title, .text, .status {
  width: 60%;
} */
.title {
  display: block;
  font-size: 16px;
  font-weight: 300;
  line-height: 24px;
  /* text-align: center;
  width: 60%;
  margin: 2em auto; */
  margin: 2em 0 2em 60px;
}
/* .text, .status {
  display: block;
  font-weight: bold;
  line-height: 22px;
}
.text {
  margin: 0.8em 0 2em 0;
}
.status::before {
  content: 'สถานะปัจจุบัน: ';
} */

.timeline ul li > div.video .time,
.timeline ul li > div.video .title,
.timeline ul li > div.video .text,
.timeline ul li > div.video .status {
  margin-left: 0;
  width: 100%;
}

.video-wrapper, .facebook-wrapper {
  margin-top: 8px;
  position: relative;
  padding-top: 25px;
  height: 0;
}
.video-wrapper {
  padding-bottom: 56.25%; /* 16:9 */
}
.facebook-wrapper {
  padding-bottom: 200%;
}
.video-wrapper iframe, .facebook-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
.image-wrapper {
  margin-top: 8px;
  width: 45%;
  position: absolute;
  bottom: -40px;
  right: -50px;
  box-shadow: 0 4px 6px 0 rgba(0,0,0,0.5);
}
.image-wrapper img {
  width: 100%;
}

.timeline ul li.in-view > div {
  transform: none;
  visibility: visible;
  opacity: 1;
}

/* .article p {
  text-indent: 2em;
  margin-bottom: 1em;
  font-family: 'Thonburi', serif;
} */

.logo {
  display: inline-block;
  height: 50px;
  background-size: cover;
  background-repeat:no-repeat;
  background-position: center center;
}
.workpoint {
  background-image: url('images/logo_workpoint.png');
  width: 150px;
}
.boonmeelab {
  background-image: url('images/logo_boonmeelab.png');
  width: 200px;
}
.float {
  position: absolute;
  left: 20px;
}

/* GENERAL MEDIA QUERIES */
/* @media only screen and (max-width: 900px) {
  .title, .text, .status {
    width: 100%;
  }
  .image-wrapper {
    width: 100%;
    position: unset;
  }
}
@media only screen and (max-width: 600px) {
  .fixed {
    text-align: left;
  }
  .bottom {
    text-align: left;
  }

  .intro .container {
    text-align: right;
    padding-right: 40px;
  }

  .timeline ul::before, .timeline ul::after {
    left: 20px;
  }
  .timeline ul li {
    margin-left: 50px;
  }
  .timeline ul li::before, .timeline ul li.last::before {
    content: '';
  }
  .timeline ul li > div {
    width: calc(100vw - 120px);
  }
} */

